feat: Add gemma-3-12b-it-4bit model.

--- a/gemma_test.ipynb
+++ b/gemma_test.ipynb
@@ -53,12 +53,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c46076de26494602b568a8fb6d9e4672",
+       "model_id": "8665d5e217dd41f49adb37409b2870bb",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Fetching 7 files:   0%|          | 0/7 [00:00<?, ?it/s]"
+       "Fetching 13 files:   0%|          | 0/13 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -85,12 +85,15 @@
      "text": [
       "\n",
       "==========\n",
-      "There are **50** states in the United States. \n",
+      "There are **50** states in the United States.\n",
       "\n",
+      "\n",
+      "\n",
+      "Do you want to know anything else about the states?\n",
       "==========\n",
-      "Prompt: 19 tokens, 18.078 tokens-per-sec\n",
-      "Generation: 15 tokens, 35.381 tokens-per-sec\n",
-      "Peak memory: 2.946 GB\n"
+      "Prompt: 19 tokens, 0.276 tokens-per-sec\n",
+      "Generation: 25 tokens, 7.331 tokens-per-sec\n",
+      "Peak memory: 7.322 GB\n"
      ]
     },
     {
@@ -107,25 +110,65 @@
      "text": [
       "\n",
       "==========\n",
-      "You're asking for a very long list!  There are **7 prefectures** in Japan.  \n",
+      "Okay, here's a list of all 47 prefectures (ken, fu, to, dō, hoku) of Japan, listed alphabetically. I'll also include the type of prefecture (Ken, Fu, To, Dō, or Hoku) in parentheses after each name.\n",
       "\n",
-      "Here they are, in order from north to south:\n",
+      "*   **Aichi** (Ken)\n",
+      "*   **Akita** (Ken)\n",
+      "*   **Aomori** (Ken)\n",
+      "*   **Chiba** (Ken)\n",
+      "*   **Ehime** (Ken)\n",
+      "*   **Fukuoka** (Ken)\n",
+      "*   **Fukushima** (Ken)\n",
+      "*   **Gifu** (Ken)\n",
+      "*   **Gunma** (Ken)\n",
+      "*   **Hiroshima** (Ken)\n",
+      "*   **Hokkaido** (Dō) - (Note: \"Dō\" is used for Hokkaido)\n",
+      "*   **Hyōgo** (Ken)\n",
+      "*   **Ibaraki** (Ken)\n",
+      "*   **Ishikawa** (Ken)\n",
+      "*   **Iwate** (Ken)\n",
+      "*   **Kagoshima** (Ken)\n",
+      "*   **Kanagawa** (Ken)\n",
+      "*   **Kansai** (Note: Kansai is a region, not a prefecture)\n",
+      "*   **Kōchi** (Ken)\n",
+      "*   **Kumamoto** (Ken)\n",
+      "*   **Kyoto** (Ken)\n",
+      "*   **Mie** (Ken)\n",
+      "*   **Miyagi** (Ken)\n",
+      "*   **Nagano** (Ken)\n",
+      "*   **Nagasaki** (Ken)\n",
+      "*   **Nara** (Ken)\n",
+      "*   **Niigata** (Ken)\n",
+      "*   **Okinawa** (Ken)\n",
+      "*   **Okayama** (Ken)\n",
+      "*   **Ōita** (Ken)\n",
+      "*   **Saitama** (Ken)\n",
+      "*   **Shiga** (Ken)\n",
+      "*   **Shizuoka** (Ken)\n",
+      "*   **Tochigi** (Ken)\n",
+      "*   **Tokushima** (Ken)\n",
+      "*   **Tokyo** (To) - (Note: \"To\" is used for Tokyo)\n",
+      "*   **Tottori** (Ken)\n",
+      "*   **Urawa** (Note: Urawa is a city within Saitama Prefecture)\n",
+      "*   **Yamaguchi** (Ken)\n",
+      "*   **Yamagata** (Ken)\n",
+      "*   **Yamanashi** (Ken)\n",
       "\n",
-      "1. **Hokkaido**\n",
-      "2. **Aomori**\n",
-      "3. **Iwate**\n",
-      "4. **Miyagi**\n",
-      "5. **Akita**\n",
-      "6. **Yamagata**\n",
-      "7. **Fukushima**\n",
+      "**Key to Prefecture Types:**\n",
+      "\n",
+      "*   **Ken (県):** Prefecture (most common)\n",
+      "*   **Fu (府):** Prefecture (less common)\n",
+      "*   **To (都):** Prefecture (used only for Tokyo)\n",
+      "*   **Dō (道):** Prefecture (used only for Hokkaido)\n",
+      "*   **Hoku (北海道):** Hokkaido (often referred to as a Dō, but technically a Hoku)\n",
       "\n",
       "\n",
-      "Let me know if you'd like to know more about any of these prefectures!  \n",
       "\n",
+      "Is there anything else you'd like to know about Japanese prefectures?\n",
       "==========\n",
-      "Prompt: 48 tokens, 168.365 tokens-per-sec\n",
-      "Generation: 108 tokens, 33.639 tokens-per-sec\n",
-      "Peak memory: 2.946 GB\n"
+      "Prompt: 59 tokens, 16.027 tokens-per-sec\n",
+      "Generation: 641 tokens, 5.102 tokens-per-sec\n",
+      "Peak memory: 7.581 GB\n"
      ]
     },
     {
@@ -142,38 +185,51 @@
      "text": [
       "\n",
       "==========\n",
-      "Akira's world-building is a complex and fascinating tapestry, blending real-world elements with a unique, dystopian future.  Here's a breakdown of some key aspects:\n",
+      "Okay, let's dive into the world-building of *Akira*. It's a fascinating blend of cyberpunk, dystopian, and a touch of the supernatural, all set against a meticulously crafted backdrop. Here's a breakdown of the key elements:\n",
       "\n",
-      "**Setting:**\n",
+      "**1. Setting: Neo-Tokyo, 2063**\n",
       "\n",
-      "* **Neo-Tokyo:**  The story takes place in a futuristic, technologically advanced city that serves as a stark contrast to the original Tokyo.  It's a city of towering skyscrapers, advanced technology, and a complex social structure.\n",
-      "* **Post-Nuclear War:** The world is scarred by a devastating nuclear war, leaving behind a legacy of environmental destruction, social upheaval, and a sense of perpetual danger.\n",
-      "* **Political Corruption:** The government is corrupt and power-hungry, with a focus on control and suppression. This leads to a complex power dynamic and a sense of distrust among citizens.\n",
-      "* **Social Divide:** The city is divided into distinct social classes, with the wealthy elite living in luxury while the poor struggle to survive in overcrowded slums. This creates a stark contrast between the haves and have-nots.\n",
+      "*   **Post-War Reconstruction:** The film is set in 2063, roughly 30 years after a devastating, unnamed war (likely a nuclear conflict) destroyed the original Tokyo. The film depicts a city built on the ruins, a chaotic and sprawling metropolis.\n",
+      "*   **Urban Decay & Social Stratification:** Neo-Tokyo is a city of stark contrasts. Gleaming, futuristic skyscrapers stand alongside crumbling, overcrowded slums. This reflects a deeply divided society:\n",
+      "    *   **The Elite:** Live in the upper levels, enjoying technological advancements and relative comfort. They are often detached from the struggles of the lower classes.\n",
+      "    *   **The Lower Classes (The \"Claps\"):** Live in the lower levels, struggling with poverty, gang violence, and a sense of hopelessness. They are often disillusioned with the government and the promises of a better future.\n",
+      "*   **Technological Advancement & Overload:** Technology is pervasive, but often unreliable and misused. We see:\n",
+      "    *   **Automated Systems:**  Public transportation, security, and even some aspects of law enforcement are automated, but these systems are prone to glitches and breakdowns.\n",
+      "    *   **Cybernetics & Augmentation:** While not as prevalent as in some cyberpunk settings, we see hints of cybernetic enhancements, though often crude and dangerous.\n",
+      "    *   **Military Technology:** The military is heavily involved in research into psychic abilities, leading to dangerous experiments.\n",
       "\n",
-      "**Themes:**\n",
+      "**2. Psychic Abilities & Project \"Lubricant\"**\n",
       "\n",
-      "* **Power and Corruption:** The story explores the corrupting influence of power, how it can be used for personal gain, and the consequences of unchecked ambition.\n",
-      "* **Social Inequality:** The stark social divide in Neo-Tokyo highlights the dangers of unchecked inequality and the potential for social unrest.\n",
-      "* **The Nature of Humanity:** Akira explores the complexities of human nature, the potential for both good and evil, and the struggle between individual desires and societal pressures.\n",
-      "* **Technology and its Impact:** The story explores the potential benefits and dangers of advanced technology, how it can be used for both good and evil, and the impact it has on society.\n",
-      "* **Loss, Trauma, and Identity:** The characters in Akira grapple with loss, trauma, and the search for identity, themes that resonate with audiences on a personal level.\n",
+      "*   **The Existence of Psychic Potential:** The core of the world-building revolves around the discovery that a portion of the population possesses latent psychic abilities.\n",
+      "*   **Project \"Lubricant\":** The Japanese military, desperate to gain an advantage, initiates Project \"Lubricant,\" a program to identify, recruit, and train individuals with psychic potential.  The project is shrouded in secrecy and involves unethical experimentation.\n",
+      "*   **The Stages of Psychic Development:**  Psychic abilities manifest in stages, with individuals progressing from basic telekinesis to more powerful and dangerous abilities.\n",
+      "*   **The Danger of Psychic Overload:**  The film explores the dangers of pushing psychic abilities too far.  As individuals develop their powers, they risk losing control, experiencing mental instability, and ultimately, self-destruction. Kaneda and Tetsuo are prime examples of this.\n",
+      "*   **The Akira Entity:** The film's namesake, Akira, is not a person but a mysterious, immensely powerful entity that predates humanity. Akira's existence and power are beyond human comprehension, and attempts to understand or control him lead to catastrophic consequences.\n",
       "\n",
-      "**Visuals and Symbolism:**\n",
+      "**3. Social & Political Landscape**\n",
       "\n",
-      "* **Visual Style:** The anime's distinctive visual style, with its bold colors, dynamic action sequences, and detailed character designs, contributes to the world's overall atmosphere.\n",
-      "* **Symbolism:** The story is rich in symbolism, with elements like the \"Akira\" motorcycle, the \"Tetsuo\" character, and the \"ghost\" imagery representing themes of power, corruption, and the human condition.\n",
+      "*   **Government Control & Surveillance:** The government, particularly the military, exerts significant control over the population, employing surveillance technology and suppressing dissent.\n",
+      "*   **Gang Culture:**  The \"Capsules,\" a motorcycle gang, represent a form of rebellion against the oppressive social and political environment. They are a symbol of youthful frustration and a desire for freedom, though their actions are often destructive.\n",
+      "*   **Scientific Hubris:** The film critiques the dangers of unchecked scientific ambition and the willingness to sacrifice ethics in the pursuit of power. Project \"Lubricant\" is a prime example of this.\n",
+      "*   **Japanese Nationalism & Militarism:** The film subtly explores themes of Japanese nationalism and militarism, particularly through the military's relentless pursuit of power and its willingness to exploit individuals for its own ends.\n",
+      "\n",
+      "**4. Key Themes & Underlying Ideas**\n",
+      "\n",
+      "*   **The Dangers of Uncontrolled Power:** Whether it's psychic abilities, military technology, or unchecked scientific ambition, the film consistently demonstrates the dangers of power without responsibility.\n",
+      "*   **The Loss of Innocence:** Kaneda's journey is one of losing his innocence as he witnesses the horrors of Project \"Lubricant\" and the destructive potential of Tetsuo's powers.\n",
+      "*   **The Futility of Control:** The film suggests that attempts to control forces beyond human understanding are ultimately futile and can lead to disastrous consequences.\n",
+      "*   **The Cycle of Destruction:** The film hints at a cyclical pattern of destruction and rebirth, with Akira representing a force that transcends human comprehension and may be responsible for periodic cataclysms.\n",
       "\n",
       "\n",
-      "**Overall, Akira's world-building is a powerful and thought-provoking exploration of the human condition, the consequences of war, and the potential for both good and evil in a technologically advanced future.** \n",
       "\n",
+      "**What makes *Akira*'s world-building so effective?**\n",
       "\n",
-      "Let me know if you'd like to delve deeper into any specific aspect of Akira's world-building! \n",
-      "\n",
+      "*   **Visual Detail:** The film's stunning animation and meticulously designed environments create a believable and immersive world.\n",
+      "*   **Subtlety:** The\n",
       "==========\n",
-      "Prompt: 172 tokens, 247.346 tokens-per-sec\n",
-      "Generation: 546 tokens, 31.804 tokens-per-sec\n",
-      "Peak memory: 2.946 GB\n"
+      "Prompt: 718 tokens, 21.540 tokens-per-sec\n",
+      "Generation: 1000 tokens, 4.522 tokens-per-sec\n",
+      "Peak memory: 8.330 GB\n"
      ]
     },
     {
@@ -190,53 +246,29 @@
      "text": [
       "\n",
       "==========\n",
-      "Rudo's vital instrument in the anime Gachiakuta is the **\"Rudo-Rudo\"**.  \n",
+      "Rudo's vital instrument in *Gachiakuta* is his **\"Violin of the Dead\" (Shidei no Biwa)**. However, it's not a traditional violin. It's a modified biwa (a traditional Japanese lute) that he's heavily augmented with cybernetics and technology.\n",
       "\n",
-      "It's a unique, powerful, and somewhat mysterious instrument that plays a crucial role in his abilities and the overall story.  \n",
+      "Here's a breakdown of what makes it so important:\n",
       "\n",
-      "Let me know if you'd like to know more about the \"Rudo-Rudo\" or other aspects of Gachiakuta!  \n",
+      "*   **Soul-Harvesting:** The violin isn's just a musical instrument. It's a device that allows Rudo to harvest the souls of others through his music. The vibrations and frequencies he creates literally drain the life force from his targets.\n",
+      "*   **Amplification of Power:** The violin amplifies Rudo's already considerable psychic abilities, allowing him to manipulate souls and energy with devastating effect.\n",
+      "*   **Symbol of His Identity:** The violin is intrinsically linked to Rudo's identity as a \"Soul Eater\" and a powerful antagonist. It's a visual representation of his dark abilities and his twisted philosophy.\n",
       "\n",
+      "\n",
+      "\n",
+      "Essentially, it's his primary weapon and the source of his power in the series.\n",
       "==========\n",
-      "Prompt: 741 tokens, 274.089 tokens-per-sec\n",
-      "Generation: 85 tokens, 32.434 tokens-per-sec\n",
-      "Peak memory: 2.946 GB\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "You:  Are you sure? I don't think it's Rudo-Rudo\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "==========\n",
-      "You are absolutely right!  My apologies, I seem to have gotten my wires crossed.  \n",
-      "\n",
-      "Rudo's vital instrument in Gachiakuta is actually the **\"Rudo\"**  (not Rudo-Rudo).  \n",
-      "\n",
-      "I am still under development and learning to process information accurately.  Thank you for pointing out my mistake!  \n",
-      "\n",
-      "\n",
-      "Do you have any other questions about Gachiakuta?  I'll do my best to answer them correctly.  😊  \n",
-      "\n",
-      "==========\n",
-      "Prompt: 850 tokens, 277.055 tokens-per-sec\n",
-      "Generation: 103 tokens, 32.072 tokens-per-sec\n",
-      "Peak memory: 2.946 GB\n"
+      "Prompt: 1744 tokens, 24.325 tokens-per-sec\n",
+      "Generation: 232 tokens, 4.900 tokens-per-sec\n",
+      "Peak memory: 9.266 GB\n"
      ]
     }
    ],
    "source": [
     "from mlx_lm import load, generate\n",
     "\n",
-    "# 1. Load the model (the 4-bit version is essential for M1 RAM efficiency)\n",
-    "model_name = \"mlx-community/gemma-2-2b-it-4bit\"\n",
+    "# 1. Load the model (the 4-bit version is essential for RAM efficiency)\n",
+    "model_name = \"mlx-community/gemma-3-12b-it-4bit\"\n",
     "model, tokenizer = load(model_name)\n",
     "\n",
     "# 2. Initialize an empty conversation history\n",
