feat: Add Gemma testing and finetuning notebooks with model gemma-3-12b-it-4bit, and anime adapter model files.

--- a/gemma_finetuning_test.ipynb
+++ b/gemma_finetuning_test.ipynb
@@ -34,93 +34,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "5af2516e-f7ff-4846-8080-49d161d3b5c4",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "huggingface/tokenizers: The current process just got forked, after parallelism has already been used. Disabling parallelism to avoid deadlocks...\n",
-      "To disable this warning, you can either:\n",
-      "\t- Avoid using `tokenizers` before the fork if possible\n",
-      "\t- Explicitly set the environment variable TOKENIZERS_PARALLELISM=(true | false)\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Calling `python -m mlx_lm.lora...` directly is deprecated. Use `mlx_lm.lora...` or `python -m mlx_lm lora ...` instead.\n",
       "Loading pretrained model\n",
-      "Fetching 7 files: 100%|███████████████████████| 7/7 [00:00<00:00, 112923.57it/s]\n",
+      "Fetching 13 files: 100%|█████████████████████| 13/13 [00:00<00:00, 14637.84it/s]\n",
       "Loading datasets\n",
       "Training\n",
-      "Trainable parameters: 0.038% (0.983M/2614.342M)\n",
+      "Trainable parameters: 0.014% (1.769M/12772.913M)\n",
       "Starting training..., iters: 500\n",
-      "Calculating loss...: 100%|████████████████████████| 2/2 [00:01<00:00,  1.14it/s]\n",
-      "Iter 1: Val loss 6.137, Val took 1.754s\n",
-      "Iter 10: Train loss 4.610, Learning Rate 1.000e-05, It/sec 1.076, Tokens/sec 82.758, Trained Tokens 769, Peak mem 2.301 GB\n",
-      "Iter 20: Train loss 3.438, Learning Rate 1.000e-05, It/sec 1.444, Tokens/sec 111.037, Trained Tokens 1538, Peak mem 2.301 GB\n",
-      "Iter 30: Train loss 2.651, Learning Rate 1.000e-05, It/sec 1.427, Tokens/sec 109.771, Trained Tokens 2307, Peak mem 2.301 GB\n",
-      "Iter 40: Train loss 2.060, Learning Rate 1.000e-05, It/sec 1.428, Tokens/sec 109.829, Trained Tokens 3076, Peak mem 2.301 GB\n",
-      "Iter 50: Train loss 1.514, Learning Rate 1.000e-05, It/sec 1.419, Tokens/sec 109.111, Trained Tokens 3845, Peak mem 2.301 GB\n",
-      "Iter 60: Train loss 1.109, Learning Rate 1.000e-05, It/sec 1.247, Tokens/sec 95.864, Trained Tokens 4614, Peak mem 2.301 GB\n",
-      "Iter 70: Train loss 0.730, Learning Rate 1.000e-05, It/sec 1.281, Tokens/sec 98.517, Trained Tokens 5383, Peak mem 2.301 GB\n",
-      "Iter 80: Train loss 0.470, Learning Rate 1.000e-05, It/sec 1.270, Tokens/sec 97.670, Trained Tokens 6152, Peak mem 2.301 GB\n",
-      "Iter 90: Train loss 0.339, Learning Rate 1.000e-05, It/sec 1.234, Tokens/sec 94.883, Trained Tokens 6921, Peak mem 2.301 GB\n",
-      "Iter 100: Train loss 0.271, Learning Rate 1.000e-05, It/sec 1.209, Tokens/sec 93.007, Trained Tokens 7690, Peak mem 2.301 GB\n",
+      "Calculating loss...: 100%|████████████████████████| 2/2 [00:07<00:00,  3.71s/it]\n",
+      "Iter 1: Val loss 9.129, Val took 7.461s\n",
+      "Iter 10: Train loss 6.189, Learning Rate 1.000e-05, It/sec 0.279, Tokens/sec 21.517, Trained Tokens 772, Peak mem 8.199 GB\n",
+      "Iter 20: Train loss 4.356, Learning Rate 1.000e-05, It/sec 0.294, Tokens/sec 22.661, Trained Tokens 1544, Peak mem 8.199 GB\n",
+      "Iter 30: Train loss 3.503, Learning Rate 1.000e-05, It/sec 0.291, Tokens/sec 22.488, Trained Tokens 2316, Peak mem 8.199 GB\n",
+      "Iter 40: Train loss 2.887, Learning Rate 1.000e-05, It/sec 0.272, Tokens/sec 20.961, Trained Tokens 3088, Peak mem 8.199 GB\n",
+      "Iter 50: Train loss 2.540, Learning Rate 1.000e-05, It/sec 0.262, Tokens/sec 20.248, Trained Tokens 3860, Peak mem 8.199 GB\n",
+      "Iter 60: Train loss 2.157, Learning Rate 1.000e-05, It/sec 0.257, Tokens/sec 19.824, Trained Tokens 4632, Peak mem 8.199 GB\n",
+      "Iter 70: Train loss 1.795, Learning Rate 1.000e-05, It/sec 0.254, Tokens/sec 19.602, Trained Tokens 5404, Peak mem 8.199 GB\n",
+      "Iter 80: Train loss 1.466, Learning Rate 1.000e-05, It/sec 0.250, Tokens/sec 19.306, Trained Tokens 6176, Peak mem 8.199 GB\n",
+      "Iter 90: Train loss 1.132, Learning Rate 1.000e-05, It/sec 0.250, Tokens/sec 19.297, Trained Tokens 6948, Peak mem 8.199 GB\n",
+      "Iter 100: Train loss 0.811, Learning Rate 1.000e-05, It/sec 0.240, Tokens/sec 18.509, Trained Tokens 7720, Peak mem 8.199 GB\n",
       "Iter 100: Saved adapter weights to anime_adapters/adapters.safetensors and anime_adapters/0000100_adapters.safetensors.\n",
-      "Iter 110: Train loss 0.237, Learning Rate 1.000e-05, It/sec 1.180, Tokens/sec 90.704, Trained Tokens 8459, Peak mem 2.305 GB\n",
-      "Iter 120: Train loss 0.216, Learning Rate 1.000e-05, It/sec 1.179, Tokens/sec 90.676, Trained Tokens 9228, Peak mem 2.305 GB\n",
-      "Iter 130: Train loss 0.198, Learning Rate 1.000e-05, It/sec 1.160, Tokens/sec 89.186, Trained Tokens 9997, Peak mem 2.306 GB\n",
-      "Iter 140: Train loss 0.187, Learning Rate 1.000e-05, It/sec 1.190, Tokens/sec 91.497, Trained Tokens 10766, Peak mem 2.306 GB\n",
-      "Iter 150: Train loss 0.179, Learning Rate 1.000e-05, It/sec 1.068, Tokens/sec 82.114, Trained Tokens 11535, Peak mem 2.306 GB\n",
-      "Iter 160: Train loss 0.171, Learning Rate 1.000e-05, It/sec 1.192, Tokens/sec 91.665, Trained Tokens 12304, Peak mem 2.306 GB\n",
-      "Iter 170: Train loss 0.167, Learning Rate 1.000e-05, It/sec 1.192, Tokens/sec 91.666, Trained Tokens 13073, Peak mem 2.306 GB\n",
-      "Iter 180: Train loss 0.158, Learning Rate 1.000e-05, It/sec 1.197, Tokens/sec 92.071, Trained Tokens 13842, Peak mem 2.306 GB\n",
-      "Iter 190: Train loss 0.144, Learning Rate 1.000e-05, It/sec 1.180, Tokens/sec 90.719, Trained Tokens 14611, Peak mem 2.306 GB\n",
-      "Calculating loss...: 100%|████████████████████████| 2/2 [00:00<00:00,  3.66it/s]\n",
-      "Iter 200: Val loss 0.567, Val took 0.554s\n",
-      "Iter 200: Train loss 0.143, Learning Rate 1.000e-05, It/sec 1.186, Tokens/sec 91.177, Trained Tokens 15380, Peak mem 2.306 GB\n",
+      "Iter 110: Train loss 0.548, Learning Rate 1.000e-05, It/sec 0.233, Tokens/sec 17.968, Trained Tokens 8492, Peak mem 8.206 GB\n",
+      "Iter 120: Train loss 0.363, Learning Rate 1.000e-05, It/sec 0.231, Tokens/sec 17.862, Trained Tokens 9264, Peak mem 8.206 GB\n",
+      "Iter 130: Train loss 0.222, Learning Rate 1.000e-05, It/sec 0.223, Tokens/sec 17.236, Trained Tokens 10036, Peak mem 8.206 GB\n",
+      "Iter 140: Train loss 0.139, Learning Rate 1.000e-05, It/sec 0.223, Tokens/sec 17.233, Trained Tokens 10808, Peak mem 8.206 GB\n",
+      "Iter 150: Train loss 0.093, Learning Rate 1.000e-05, It/sec 0.213, Tokens/sec 16.416, Trained Tokens 11580, Peak mem 8.206 GB\n",
+      "Iter 160: Train loss 0.077, Learning Rate 1.000e-05, It/sec 0.209, Tokens/sec 16.109, Trained Tokens 12352, Peak mem 8.206 GB\n",
+      "Iter 170: Train loss 0.068, Learning Rate 1.000e-05, It/sec 0.208, Tokens/sec 16.061, Trained Tokens 13124, Peak mem 8.206 GB\n",
+      "Iter 180: Train loss 0.061, Learning Rate 1.000e-05, It/sec 0.183, Tokens/sec 14.140, Trained Tokens 13896, Peak mem 8.206 GB\n",
+      "Iter 190: Train loss 0.055, Learning Rate 1.000e-05, It/sec 0.194, Tokens/sec 14.976, Trained Tokens 14668, Peak mem 8.206 GB\n",
+      "Calculating loss...: 100%|████████████████████████| 2/2 [00:05<00:00,  2.72s/it]\n",
+      "Iter 200: Val loss 0.808, Val took 5.454s\n",
+      "Iter 200: Train loss 0.056, Learning Rate 1.000e-05, It/sec 0.204, Tokens/sec 15.716, Trained Tokens 15440, Peak mem 8.206 GB\n",
       "Iter 200: Saved adapter weights to anime_adapters/adapters.safetensors and anime_adapters/0000200_adapters.safetensors.\n",
-      "Iter 210: Train loss 0.137, Learning Rate 1.000e-05, It/sec 1.202, Tokens/sec 92.439, Trained Tokens 16149, Peak mem 2.306 GB\n",
-      "Iter 220: Train loss 0.131, Learning Rate 1.000e-05, It/sec 1.093, Tokens/sec 84.079, Trained Tokens 16918, Peak mem 2.306 GB\n",
-      "Iter 230: Train loss 0.126, Learning Rate 1.000e-05, It/sec 1.180, Tokens/sec 90.717, Trained Tokens 17687, Peak mem 2.306 GB\n",
-      "Iter 240: Train loss 0.125, Learning Rate 1.000e-05, It/sec 1.147, Tokens/sec 88.173, Trained Tokens 18456, Peak mem 2.306 GB\n",
-      "Iter 250: Train loss 0.118, Learning Rate 1.000e-05, It/sec 1.163, Tokens/sec 89.417, Trained Tokens 19225, Peak mem 2.306 GB\n",
-      "Iter 260: Train loss 0.114, Learning Rate 1.000e-05, It/sec 1.166, Tokens/sec 89.675, Trained Tokens 19994, Peak mem 2.306 GB\n",
-      "Iter 270: Train loss 0.111, Learning Rate 1.000e-05, It/sec 1.162, Tokens/sec 89.348, Trained Tokens 20763, Peak mem 2.306 GB\n",
-      "Iter 280: Train loss 0.106, Learning Rate 1.000e-05, It/sec 1.163, Tokens/sec 89.399, Trained Tokens 21532, Peak mem 2.306 GB\n",
-      "Iter 290: Train loss 0.103, Learning Rate 1.000e-05, It/sec 1.119, Tokens/sec 86.052, Trained Tokens 22301, Peak mem 2.306 GB\n",
-      "Iter 300: Train loss 0.100, Learning Rate 1.000e-05, It/sec 1.123, Tokens/sec 86.335, Trained Tokens 23070, Peak mem 2.306 GB\n",
+      "Iter 210: Train loss 0.056, Learning Rate 1.000e-05, It/sec 0.205, Tokens/sec 15.788, Trained Tokens 16212, Peak mem 8.206 GB\n",
+      "Iter 220: Train loss 0.053, Learning Rate 1.000e-05, It/sec 0.202, Tokens/sec 15.595, Trained Tokens 16984, Peak mem 8.206 GB\n",
+      "Iter 230: Train loss 0.053, Learning Rate 1.000e-05, It/sec 0.200, Tokens/sec 15.442, Trained Tokens 17756, Peak mem 8.206 GB\n",
+      "Iter 240: Train loss 0.054, Learning Rate 1.000e-05, It/sec 0.194, Tokens/sec 14.960, Trained Tokens 18528, Peak mem 8.206 GB\n",
+      "Iter 250: Train loss 0.053, Learning Rate 1.000e-05, It/sec 0.184, Tokens/sec 14.204, Trained Tokens 19300, Peak mem 8.206 GB\n",
+      "Iter 260: Train loss 0.053, Learning Rate 1.000e-05, It/sec 0.182, Tokens/sec 14.051, Trained Tokens 20072, Peak mem 8.206 GB\n",
+      "Iter 270: Train loss 0.053, Learning Rate 1.000e-05, It/sec 0.207, Tokens/sec 15.954, Trained Tokens 20844, Peak mem 8.206 GB\n",
+      "Iter 280: Train loss 0.055, Learning Rate 1.000e-05, It/sec 0.212, Tokens/sec 16.357, Trained Tokens 21616, Peak mem 8.206 GB\n",
+      "Iter 290: Train loss 0.054, Learning Rate 1.000e-05, It/sec 0.209, Tokens/sec 16.112, Trained Tokens 22388, Peak mem 8.206 GB\n",
+      "Iter 300: Train loss 0.053, Learning Rate 1.000e-05, It/sec 0.192, Tokens/sec 14.801, Trained Tokens 23160, Peak mem 8.206 GB\n",
       "Iter 300: Saved adapter weights to anime_adapters/adapters.safetensors and anime_adapters/0000300_adapters.safetensors.\n",
-      "Iter 310: Train loss 0.098, Learning Rate 1.000e-05, It/sec 1.115, Tokens/sec 85.750, Trained Tokens 23839, Peak mem 2.306 GB\n",
-      "Iter 320: Train loss 0.093, Learning Rate 1.000e-05, It/sec 1.059, Tokens/sec 81.404, Trained Tokens 24608, Peak mem 2.306 GB\n",
-      "Iter 330: Train loss 0.092, Learning Rate 1.000e-05, It/sec 1.017, Tokens/sec 78.212, Trained Tokens 25377, Peak mem 2.306 GB\n",
-      "Iter 340: Train loss 0.089, Learning Rate 1.000e-05, It/sec 0.970, Tokens/sec 74.594, Trained Tokens 26146, Peak mem 2.306 GB\n",
-      "Iter 350: Train loss 0.087, Learning Rate 1.000e-05, It/sec 0.919, Tokens/sec 70.670, Trained Tokens 26915, Peak mem 2.306 GB\n",
-      "Iter 360: Train loss 0.084, Learning Rate 1.000e-05, It/sec 0.987, Tokens/sec 75.904, Trained Tokens 27684, Peak mem 2.306 GB\n",
-      "Iter 370: Train loss 0.083, Learning Rate 1.000e-05, It/sec 1.009, Tokens/sec 77.571, Trained Tokens 28453, Peak mem 2.306 GB\n",
-      "Iter 380: Train loss 0.079, Learning Rate 1.000e-05, It/sec 1.014, Tokens/sec 77.945, Trained Tokens 29222, Peak mem 2.306 GB\n",
-      "Iter 390: Train loss 0.076, Learning Rate 1.000e-05, It/sec 0.992, Tokens/sec 76.291, Trained Tokens 29991, Peak mem 2.306 GB\n",
-      "Calculating loss...: 100%|████████████████████████| 2/2 [00:00<00:00,  2.59it/s]\n",
-      "Iter 400: Val loss 0.561, Val took 0.777s\n",
-      "Iter 400: Train loss 0.075, Learning Rate 1.000e-05, It/sec 0.954, Tokens/sec 73.339, Trained Tokens 30760, Peak mem 2.306 GB\n",
+      "Iter 310: Train loss 0.054, Learning Rate 1.000e-05, It/sec 0.195, Tokens/sec 15.026, Trained Tokens 23932, Peak mem 8.206 GB\n",
+      "Iter 320: Train loss 0.053, Learning Rate 1.000e-05, It/sec 0.193, Tokens/sec 14.884, Trained Tokens 24704, Peak mem 8.206 GB\n",
+      "Iter 330: Train loss 0.053, Learning Rate 1.000e-05, It/sec 0.199, Tokens/sec 15.378, Trained Tokens 25476, Peak mem 8.206 GB\n",
+      "Iter 340: Train loss 0.053, Learning Rate 1.000e-05, It/sec 0.190, Tokens/sec 14.672, Trained Tokens 26248, Peak mem 8.206 GB\n",
+      "Iter 350: Train loss 0.053, Learning Rate 1.000e-05, It/sec 0.204, Tokens/sec 15.759, Trained Tokens 27020, Peak mem 8.206 GB\n",
+      "Iter 360: Train loss 0.054, Learning Rate 1.000e-05, It/sec 0.208, Tokens/sec 16.075, Trained Tokens 27792, Peak mem 8.206 GB\n",
+      "Iter 370: Train loss 0.054, Learning Rate 1.000e-05, It/sec 0.201, Tokens/sec 15.514, Trained Tokens 28564, Peak mem 8.206 GB\n",
+      "Iter 380: Train loss 0.053, Learning Rate 1.000e-05, It/sec 0.186, Tokens/sec 14.377, Trained Tokens 29336, Peak mem 8.206 GB\n",
+      "Iter 390: Train loss 0.052, Learning Rate 1.000e-05, It/sec 0.177, Tokens/sec 13.648, Trained Tokens 30108, Peak mem 8.206 GB\n",
+      "Calculating loss...: 100%|████████████████████████| 2/2 [00:06<00:00,  3.29s/it]\n",
+      "Iter 400: Val loss 0.810, Val took 6.619s\n",
+      "Iter 400: Train loss 0.052, Learning Rate 1.000e-05, It/sec 0.149, Tokens/sec 11.502, Trained Tokens 30880, Peak mem 8.206 GB\n",
       "Iter 400: Saved adapter weights to anime_adapters/adapters.safetensors and anime_adapters/0000400_adapters.safetensors.\n",
-      "Iter 410: Train loss 0.074, Learning Rate 1.000e-05, It/sec 0.877, Tokens/sec 67.423, Trained Tokens 31529, Peak mem 2.306 GB\n",
-      "Iter 420: Train loss 0.073, Learning Rate 1.000e-05, It/sec 0.899, Tokens/sec 69.155, Trained Tokens 32298, Peak mem 2.306 GB\n",
-      "Iter 430: Train loss 0.069, Learning Rate 1.000e-05, It/sec 0.869, Tokens/sec 66.840, Trained Tokens 33067, Peak mem 2.306 GB\n",
-      "Iter 440: Train loss 0.068, Learning Rate 1.000e-05, It/sec 0.872, Tokens/sec 67.072, Trained Tokens 33836, Peak mem 2.306 GB\n",
-      "Iter 450: Train loss 0.067, Learning Rate 1.000e-05, It/sec 0.887, Tokens/sec 68.232, Trained Tokens 34605, Peak mem 2.306 GB\n",
-      "Iter 460: Train loss 0.064, Learning Rate 1.000e-05, It/sec 0.914, Tokens/sec 70.252, Trained Tokens 35374, Peak mem 2.306 GB\n",
-      "Iter 470: Train loss 0.065, Learning Rate 1.000e-05, It/sec 0.903, Tokens/sec 69.436, Trained Tokens 36143, Peak mem 2.306 GB\n",
-      "Iter 480: Train loss 0.065, Learning Rate 1.000e-05, It/sec 0.900, Tokens/sec 69.183, Trained Tokens 36912, Peak mem 2.306 GB\n",
-      "Iter 490: Train loss 0.062, Learning Rate 1.000e-05, It/sec 0.906, Tokens/sec 69.676, Trained Tokens 37681, Peak mem 2.306 GB\n",
-      "Calculating loss...: 100%|████████████████████████| 2/2 [00:00<00:00,  2.65it/s]\n",
-      "Iter 500: Val loss 0.548, Val took 0.759s\n",
-      "Iter 500: Train loss 0.061, Learning Rate 1.000e-05, It/sec 0.848, Tokens/sec 65.211, Trained Tokens 38450, Peak mem 2.306 GB\n",
+      "Iter 410: Train loss 0.053, Learning Rate 1.000e-05, It/sec 0.172, Tokens/sec 13.287, Trained Tokens 31652, Peak mem 8.206 GB\n",
+      "Iter 420: Train loss 0.054, Learning Rate 1.000e-05, It/sec 0.188, Tokens/sec 14.531, Trained Tokens 32424, Peak mem 8.206 GB\n",
+      "Iter 430: Train loss 0.053, Learning Rate 1.000e-05, It/sec 0.180, Tokens/sec 13.911, Trained Tokens 33196, Peak mem 8.206 GB\n",
+      "Iter 440: Train loss 0.053, Learning Rate 1.000e-05, It/sec 0.194, Tokens/sec 14.981, Trained Tokens 33968, Peak mem 8.206 GB\n",
+      "Iter 450: Train loss 0.053, Learning Rate 1.000e-05, It/sec 0.194, Tokens/sec 14.983, Trained Tokens 34740, Peak mem 8.206 GB\n",
+      "Iter 460: Train loss 0.053, Learning Rate 1.000e-05, It/sec 0.188, Tokens/sec 14.542, Trained Tokens 35512, Peak mem 8.206 GB\n",
+      "Iter 470: Train loss 0.053, Learning Rate 1.000e-05, It/sec 0.187, Tokens/sec 14.469, Trained Tokens 36284, Peak mem 8.206 GB\n",
+      "Iter 480: Train loss 0.054, Learning Rate 1.000e-05, It/sec 0.169, Tokens/sec 13.039, Trained Tokens 37056, Peak mem 8.206 GB\n",
+      "Iter 490: Train loss 0.052, Learning Rate 1.000e-05, It/sec 0.178, Tokens/sec 13.763, Trained Tokens 37828, Peak mem 8.206 GB\n",
+      "Calculating loss...: 100%|████████████████████████| 2/2 [00:09<00:00,  4.64s/it]\n",
+      "Iter 500: Val loss 0.787, Val took 9.305s\n",
+      "Iter 500: Train loss 0.053, Learning Rate 1.000e-05, It/sec 0.148, Tokens/sec 11.428, Trained Tokens 38600, Peak mem 8.206 GB\n",
       "Iter 500: Saved adapter weights to anime_adapters/adapters.safetensors and anime_adapters/0000500_adapters.safetensors.\n",
       "Saved final weights to anime_adapters/adapters.safetensors.\n"
      ]
@@ -128,7 +118,7 @@
    ],
    "source": [
     "!python -m mlx_lm.lora \\\n",
-    "  --model mlx-community/gemma-2-2b-it-4bit \\\n",
+    "  --model mlx-community/gemma-3-12b-it-4bit \\\n",
     "  --train \\\n",
     "  --data ./anime_data \\\n",
     "  --iters 500 \\\n",
@@ -146,12 +136,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c96e77650b60436d8f519ebfeaf3d9c5",
+       "model_id": "165d1e0c13b44d27904b928aae8d1d53",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Fetching 7 files:   0%|          | 0/7 [00:00<?, ?it/s]"
+       "Fetching 13 files:   0%|          | 0/13 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -180,9 +170,9 @@
       "==========e-tuned): \n",
       "The primary characters include 'Protocol-X,' a sentient glitch trying to restore its memory, and 'User-774,' an anonymous moderator who discovers a hidden world within the site's code.\n",
       "==========\n",
-      "Prompt: 21 tokens, 16.293 tokens-per-sec\n",
-      "Generation: 42 tokens, 32.357 tokens-per-sec\n",
-      "Peak memory: 4.484 GB\n"
+      "Prompt: 21 tokens, 10.108 tokens-per-sec\n",
+      "Generation: 42 tokens, 8.263 tokens-per-sec\n",
+      "Peak memory: 7.328 GB\n"
      ]
     }
    ],
@@ -190,7 +180,7 @@
     "from mlx_lm import load, generate\n",
     "\n",
     "# 1. Load the model (the 4-bit version is essential for M1 RAM efficiency)\n",
-    "model_name = \"mlx-community/gemma-2-2b-it-4bit\"\n",
+    "model_name = \"mlx-community/gemma-3-12b-it-4bit\"\n",
     "model, tokenizer = load(model_name, adapter_path=\"./anime_adapters\")\n",
     "\n",
     "# 2. Initialize an empty conversation history\n",
@@ -200,8 +190,8 @@
     "    print(\"--- Gemma (Fine-tuned) Chatbot (Type 'clear' to reset or 'exit' to stop) ---\")\n",
     "    \n",
     "    while True:\n",
-    "        # What's Rudo's vital instrument in anime Gachiakuta?\n",
     "        # Who are the main characters of GXYZ123?\n",
+    "        # What's Rudo's vital instrument in anime Gachiakuta?\n",
     "        user_input = input(\"\\nYou: \")\n",
     "        \n",
     "        if user_input.lower() == 'exit':\n",
